traducción archivo using/cmdline.po

--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
-"PO-Revision-Date: 2021-10-18 21:54-0300\n"
-"Last-Translator: Andrea Griffiths <andreagriffiths11@gmail.com>\n"
-"Language: es_AR\n"
+"PO-Revision-Date: 2023-10-16 10:10-0300\n"
+"Last-Translator: Alfonso Areiza Guerra <alfareiza@gmail.com>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es_AR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.13.0\n"
+"X-Generator: Poedit 3.4\n"
 
 #: ../Doc/using/cmdline.rst:9
 msgid "Command line and environment"
@@ -391,12 +392,11 @@ msgid "Generic options"
 msgstr "Opciones genéricas"
 
 #: ../Doc/using/cmdline.rst:195
-#, fuzzy
 msgid ""
 "Print a short description of all command line options and corresponding "
 "environment variables and exit."
 msgstr ""
-"Imprima una breve descripción de todas las opciones de la línea de comandos."
+"Imprime una breve descripción de todas las opciones de la línea de comandos."
 
 #: ../Doc/using/cmdline.rst:200
 msgid ""
@@ -486,21 +486,21 @@ msgstr ""
 "marca de tiempo."
 
 #: ../Doc/using/cmdline.rst:274
-#, fuzzy
 msgid ""
 "Turn on parser debugging output (for expert only). See also the :envvar:"
 "`PYTHONDEBUG` environment variable."
 msgstr ""
-"Active la salida de depuración del analizador (solo para expertos, "
-"dependiendo de las opciones de compilación).  Véase también :envvar:"
+"Activa la salida de depuración (solo para expertos, dependiendo de las "
+"opciones de compilación).  Véase también la variable de ambiente :envvar:"
 "`PYTHONDEBUG`."
 
 #: ../Doc/using/cmdline.rst:277
-#, fuzzy
 msgid ""
 "This option requires a :ref:`debug build of Python <debug-build>`, otherwise "
 "it's ignored."
-msgstr "Necesita :ref:`compilación de depuración de Python <debug-build>`."
+msgstr ""
+"Esta opción necesita una :ref:`compilación de depuración de Python <debug-"
+"build>`, de lo contrario será ignorado."
 
 #: ../Doc/using/cmdline.rst:283
 msgid ""
@@ -583,31 +583,39 @@ msgstr ""
 
 #: ../Doc/using/cmdline.rst:336
 msgid "Don't prepend a potentially unsafe path to :data:`sys.path`:"
-msgstr ""
+msgstr "No anteponga una ruta potencialmente insegura a :data:`sys.path`:"
 
 #: ../Doc/using/cmdline.rst:338
 msgid ""
 "``python -m module`` command line: Don't prepend the current working "
 "directory."
 msgstr ""
+"``python -m module`` command line: No anteponga el directorio de trabajo "
+"actual."
 
 #: ../Doc/using/cmdline.rst:340
 msgid ""
 "``python script.py`` command line: Don't prepend the script's directory. If "
 "it's a symbolic link, resolve symbolic links."
 msgstr ""
+"``python script.py`` command line: No anteponga el directorio del script. Si "
+"es un enlace simbólico, resuelva los enlaces simbólicos."
 
 #: ../Doc/using/cmdline.rst:342
 msgid ""
 "``python -c code`` and ``python`` (REPL) command lines: Don't prepend an "
 "empty string, which means the current working directory."
 msgstr ""
+"``python -c code`` y ``python`` (REPL) command lines: No anteponga una "
+"cadena vacía, lo que significa el directorio de trabajo actual."
 
 #: ../Doc/using/cmdline.rst:345
 msgid ""
 "See also the :envvar:`PYTHONSAFEPATH` environment variable, and :option:`-E` "
 "and :option:`-I` (isolated) options."
 msgstr ""
+"Consulte también la variable de entorno :envvar:`PYTHONSAFEPATH` y las "
+"opciones :option:`-E` y :option:`-I` (aisladas)."
 
 #: ../Doc/using/cmdline.rst:353
 msgid ""
@@ -640,7 +648,6 @@ msgstr ""
 "entre invocaciones repetidas de Python."
 
 #: ../Doc/using/cmdline.rst:370
-#, fuzzy
 msgid ""
 "Hash randomization is intended to provide protection against a denial-of-"
 "service caused by carefully chosen inputs that exploit the worst case "
@@ -803,7 +810,6 @@ msgstr ""
 "categoría de advertencia especificada."
 
 #: ../Doc/using/cmdline.rst:467
-#, fuzzy
 msgid ""
 "The *module* field matches the (fully qualified) module name; this match is "
 "case-sensitive."
@@ -872,11 +878,12 @@ msgstr ""
 "define actualmente los siguientes valores posibles:"
 
 #: ../Doc/using/cmdline.rst:498
-#, fuzzy
 msgid ""
 "``-X faulthandler`` to enable :mod:`faulthandler`. See also :envvar:"
 "`PYTHONFAULTHANDLER`."
-msgstr "``-X faulthandler`` para habilitar :mod:`faulthandler`;"
+msgstr ""
+"``-X faulthandler`` para habilitar :mod:`faulthandler`. Véase :envvar:"
+"`PYTHONFAULTHANDLER` para obtener más información."
 
 #: ../Doc/using/cmdline.rst:500
 msgid ""
@@ -891,7 +898,6 @@ msgstr ""
 "en :ref:`compilaciones de depuración <debug-build>`."
 
 #: ../Doc/using/cmdline.rst:504
-#, fuzzy
 msgid ""
 "``-X tracemalloc`` to start tracing Python memory allocations using the :mod:"
 "`tracemalloc` module. By default, only the most recent frame is stored in a "
@@ -902,9 +908,10 @@ msgstr ""
 "``-X tracemalloc`` para iniciar el seguimiento de las asignaciones de "
 "memoria de Python mediante el módulo :mod:`tracemalloc`. De forma "
 "predeterminada, solo el marco más reciente se almacena en un seguimiento de "
-"un seguimiento. Utilice ``-X tracemalloc-NFRAME`` para iniciar el "
+"un seguimiento. Utilice ``-X tracemalloc=NFRAME`` para iniciar el "
 "seguimiento con un límite de rastreo de marcos *NFRAME*. Consulte el :func:"
-"`tracemalloc.start` para obtener más información."
+"`tracemalloc.start` y :envvar:`PYTHONTRACEMALLOC` para obtener más "
+"información."
 
 #: ../Doc/using/cmdline.rst:510
 msgid ""
@@ -912,6 +919,9 @@ msgid ""
 "length limitation <int_max_str_digits>`.  See also :envvar:"
 "`PYTHONINTMAXSTRDIGITS`."
 msgstr ""
+"``-X int_max_str_digits`` configura la :ref:`limitación de longitud de "
+"conversión de cadena de tipo entero <int_max_str_digits>`. Véase también :"
+"envvar:`PYTHONINTMAXSTRDIGITS`."
 
 #: ../Doc/using/cmdline.rst:513
 msgid ""
@@ -938,7 +948,6 @@ msgstr ""
 "para habilitarse de forma predeterminada."
 
 #: ../Doc/using/cmdline.rst:521
-#, fuzzy
 msgid ""
 "``-X utf8`` enables the :ref:`Python UTF-8 Mode <utf8-mode>`. ``-X utf8=0`` "
 "explicitly disables :ref:`Python UTF-8 Mode <utf8-mode>` (even when it would "
@@ -946,7 +955,8 @@ msgid ""
 msgstr ""
 "``-X utf8`` habilita el :ref:`modo Python UTF-8 <utf8-mode>`. ``-X utf8=0`` "
 "desactiva explícitamente el :ref:`modo Python UTF-8 <utf8-mode>` (incluso "
-"cuando al contrario se activaría automáticamente)."
+"cuando al contrario se activaría automáticamente). Véase :envvar:"
+"`PYTHONUTF8`."
 
 #: ../Doc/using/cmdline.rst:525
 msgid ""
@@ -977,6 +987,13 @@ msgid ""
 "location indicators when the interpreter displays tracebacks. See also :"
 "envvar:`PYTHONNODEBUGRANGES`."
 msgstr ""
+"``-X no_debug_ranges`` deshabilita la inclusión de tablas que asignan "
+"información de ubicación adicional (línea final, desplazamiento de columna "
+"inicial y desplazamiento de columna final) a cada instrucción en los objetos "
+"de código. Esto es útil cuando se desean objetos de código más pequeños y "
+"archivos pyc, además de suprimir los indicadores de ubicación visuales "
+"adicionales cuando el intérprete muestra rastreos. Véase también :envvar:"
+"`PYTHONNODEBUGRANGES`."
 
 #: ../Doc/using/cmdline.rst:537
 msgid ""
@@ -988,6 +1005,14 @@ msgid ""
 "\"importlib_bootstrap\" and \"importlib_bootstrap_external\" frozen modules "
 "are always used, even if this flag is set to \"off\"."
 msgstr ""
+"``-X frozen_modules`` determina si la maquinaria de importación ignora o no "
+"los módulos congelados. Un valor “on” significa que se importan y “off” "
+"significa que se ignoran. El valor predeterminado es “on” si se trata de un "
+"Python instalado (el caso normal). Si está en desarrollo (ejecutándose desde "
+"el árbol de fuentes), entonces el valor predeterminado es “off”. Tenga en "
+"cuenta que los módulos congelados “importlib_bootstrap” e "
+"“importlib_bootstrap_external” siempre se utilizan, incluso si este "
+"indicador está configurado en “off”."
 
 #: ../Doc/using/cmdline.rst:544
 msgid ""
@@ -997,6 +1022,11 @@ msgid ""
 "if is not supported on the current system. The default value is \"off\". See "
 "also :envvar:`PYTHONPERFSUPPORT` and :ref:`perf_profiling`."
 msgstr ""
+"``-X perf`` habilita el soporte para el perfilador ``perf`` de Linux. Cuando "
+"se proporciona esta opción, el perfilador ``perf`` podrá informar llamadas "
+"de Python. Esta opción sólo está disponible en algunas plataformas y no hará "
+"nada si no es compatible con el sistema actual. El valor predeterminado es "
+"“off”. Consulte también :envvar:`PYTHONPERFSUPPORT` y :ref:`perf_profiling`."
 
 #: ../Doc/using/cmdline.rst:550
 msgid ""
@@ -1039,8 +1069,9 @@ msgid ""
 "Using ``-X dev`` option, check *encoding* and *errors* arguments on string "
 "encoding and decoding operations."
 msgstr ""
-"Usando la opción ``-X dev``, verifique *encoding* y *errors* argumentos en "
-"las operaciones de codificación y decodificación de cadenas de caracteres."
+"Usando la opción ``-X dev``, se verifica tanto el *encoding* como los "
+"*errors* en argumentos en las operaciones de codificación y decodificación "
+"de cadenas de caracteres."
 
 #: ../Doc/using/cmdline.rst:576
 msgid "The ``-X showalloccount`` option has been removed."
@@ -1055,27 +1086,24 @@ msgid "The ``-X oldparser`` option."
 msgstr "La opción ``-X analizador antiguo``."
 
 #: ../Doc/using/cmdline.rst:584
-#, fuzzy
 msgid "The ``-X no_debug_ranges`` option."
-msgstr "La opción ``-X analizador antiguo``."
+msgstr "La opción ``-X no_debug_ranges``."
 
 #: ../Doc/using/cmdline.rst:587
-#, fuzzy
 msgid "The ``-X frozen_modules`` option."
-msgstr "La opción ``-X warn_default_encoding``."
+msgstr "La opción ``-X frozen_modules``."
 
 #: ../Doc/using/cmdline.rst:590
 msgid "The ``-X int_max_str_digits`` option."
-msgstr ""
+msgstr "La opción ``-X int_max_str_digits``."
 
 #: ../Doc/using/cmdline.rst:593
-#, fuzzy
 msgid "The ``-X perf`` option."
-msgstr "La opción ``-X analizador antiguo``."
+msgstr "La opción ``-X perf``."
 
 #: ../Doc/using/cmdline.rst:598
 msgid "Options you shouldn't use"
-msgstr "Opciones que no debe usar"
+msgstr "Opciones que no se deben usar"
 
 #: ../Doc/using/cmdline.rst:602
 msgid "Reserved for use by Jython_."
@@ -1169,13 +1197,13 @@ msgstr ""
 "Python como la variable :data:`sys.path`."
 
 #: ../Doc/using/cmdline.rst:653
-#, fuzzy
 msgid ""
 "If this is set to a non-empty string, don't prepend a potentially unsafe "
 "path to :data:`sys.path`: see the :option:`-P` option for details."
 msgstr ""
-"Si se establece en una cadena no vacía, equivale a especificar la opción :"
-"option:`-u`."
+"Si se establece en una cadena no vacía, no anteponga una ruta potencialmente "
+"insegura a :data:`sys.path`: véase la opción :option:`-u` para más "
+"información."
 
 #: ../Doc/using/cmdline.rst:661
 msgid ""
@@ -1259,11 +1287,12 @@ msgstr ""
 "d` varias veces."
 
 #: ../Doc/using/cmdline.rst:707
-#, fuzzy
 msgid ""
 "This environment variable requires a :ref:`debug build of Python <debug-"
 "build>`, otherwise it's ignored."
-msgstr "Necesita :ref:`compilación de depuración de Python <debug-build>`."
+msgstr ""
+"Esta variable de entorno necesita una :ref:`compilación de depuración de "
+"Python <debug-build>`, de lo contrario será ignorada."
 
 #: ../Doc/using/cmdline.rst:713
 msgid ""
@@ -1372,6 +1401,9 @@ msgid ""
 "interpreter's global :ref:`integer string conversion length limitation "
 "<int_max_str_digits>`."
 msgstr ""
+"Si esta variable se establece en un número entero, se utiliza para "
+"configurar la :ref:`limitación de longitud de conversión de cadena entera "
+"<int_max_str_digits>`."
 
 #: ../Doc/using/cmdline.rst:784
 msgid ""
@@ -1418,7 +1450,6 @@ msgstr ""
 "<site.USER_SITE>` a :data:`sys.path`."
 
 #: ../Doc/using/cmdline.rst:812
-#, fuzzy
 msgid ""
 "Defines the :data:`user base directory <site.USER_BASE>`, which is used to "
 "compute the path of the :data:`user site-packages directory <site."
@@ -1427,8 +1458,8 @@ msgid ""
 msgstr ""
 "Define el :data:`user base directory <site.USER_BASE>`, que se utiliza para "
 "calcular la ruta de acceso de :data:`user site-packages directory <site."
-"USER_SITE>` y :ref:`Distutils installation paths <inst-alt-install-user>` "
-"para ``python setup.py install --user``."
+"USER_SITE>` y :ref:`installation paths <sysconfig-user-scheme>` para "
+"``python -m pie install --user``."
 
 #: ../Doc/using/cmdline.rst:824
 msgid ""
@@ -1465,7 +1496,6 @@ msgstr ""
 "opción :option:`-X` ``faulthandler``."
 
 #: ../Doc/using/cmdline.rst:863
-#, fuzzy
 msgid ""
 "If this environment variable is set to a non-empty string, start tracing "
 "Python memory allocations using the :mod:`tracemalloc` module. The value of "
@@ -1478,18 +1508,18 @@ msgstr ""
 "trazar las asignaciones de memoria de Python mediante el módulo :mod:"
 "`tracemalloc`. El valor de la variable es el número máximo de marcos "
 "almacenados en un rastreo de un seguimiento. Por ejemplo, "
-"``PYTHONTRACEMALLOC=1`` almacena sólo el marco más reciente. Consulte el :"
-"func:`tracemalloc.start` para obtener más información."
+"``PYTHONTRACEMALLOC=1`` almacena sólo el marco más reciente. Consulte la "
+"función :func:`tracemalloc.start` para obtener más información. Esto "
+"equivale a configurar la opción :option:`-X` ``tracemalloc``."
 
 #: ../Doc/using/cmdline.rst:876
-#, fuzzy
 msgid ""
 "If this environment variable is set to a non-empty string, Python will show "
 "how long each import takes. This is equivalent to setting the :option:`-X` "
 "``importtime`` option."
 msgstr ""
 "Si esta variable de entorno se establece en una cadena no vacía, Python "
-"mostrará cuánto tiempo tarda cada importación.  Esto equivale exactamente a "
+"mostrará cuánto tiempo tarda cada importación. Esto equivale exactamente a "
 "establecer ``-X importtime`` en la línea de comandos."
 
 #: ../Doc/using/cmdline.rst:885
@@ -1519,26 +1549,24 @@ msgstr ""
 "allocators>`."
 
 #: ../Doc/using/cmdline.rst:899
-#, fuzzy
 msgid ""
 "``malloc``: use the :c:func:`malloc` function of the C library for all "
 "domains (:c:macro:`PYMEM_DOMAIN_RAW`, :c:macro:`PYMEM_DOMAIN_MEM`, :c:macro:"
 "`PYMEM_DOMAIN_OBJ`)."
 msgstr ""
 "``malloc``: utilice la función :c:func:`malloc` de la biblioteca C para "
-"todos los dominios (:c:data:`PYMEM_DOMAIN_RAW`, :c:data:`PYMEM_DOMAIN_MEM`, :"
-"c:data:`PYMEM_DOMAIN_OBJ`)."
+"todos los dominios (:c:macro:`PYMEM_DOMAIN_RAW`, :c:macro:"
+"`PYMEM_DOMAIN_MEM`, :c:macro:`PYMEM_DOMAIN_OBJ`)."
 
 #: ../Doc/using/cmdline.rst:902
-#, fuzzy
 msgid ""
 "``pymalloc``: use the :ref:`pymalloc allocator <pymalloc>` for :c:macro:"
 "`PYMEM_DOMAIN_MEM` and :c:macro:`PYMEM_DOMAIN_OBJ` domains and use the :c:"
 "func:`malloc` function for the :c:macro:`PYMEM_DOMAIN_RAW` domain."
 msgstr ""
-"``pymalloc``: utilice los dominios :ref:`pymalloc allocator <pymalloc>` "
-"para :c:data:`PYMEM_DOMAIN_MEM` y :c:data:`PYMEM_DOMAIN_OBJ` y utilice la "
-"función :c:func:`malloc` para el dominio :c:data:`PYMEM_DOMAIN_RAW`."
+"``pymalloc``: utilice el :ref:`pymalloc allocator <pymalloc>` para :c:macro:"
+"`PYMEM_DOMAIN_MEM` y dominios :c:macro:`PYMEM_DOMAIN_OBJ` y utilice la "
+"función :c:func:`malloc` para el dominio :c:macro:`PYMEM_DOMAIN_RAW`."
 
 #: ../Doc/using/cmdline.rst:906
 msgid "Install :ref:`debug hooks <pymem-debug-hooks>`:"
@@ -1756,16 +1784,14 @@ msgstr ""
 "``ASCII`` en lugar de ``UTF-8`` para las interfaces del sistema."
 
 #: ../Doc/using/cmdline.rst:1009
-#, fuzzy
 msgid ":ref:`Availability <availability>`: Unix."
-msgstr ":ref:`Availability <availability>`: \\*nix."
+msgstr ":ref:`Availability <availability>`: Unix."
 
 #: ../Doc/using/cmdline.rst:1011
 msgid "See :pep:`538` for more details."
 msgstr "Consulte :pep:`538` para obtener más detalles."
 
 #: ../Doc/using/cmdline.rst:1017
-#, fuzzy
 msgid ""
 "If this environment variable is set to a non-empty string, enable :ref:"
 "`Python Development Mode <devmode>`, introducing additional runtime checks "
@@ -1775,7 +1801,8 @@ msgstr ""
 "Si esta variable de entorno se establece en una cadena no vacía, habilite :"
 "ref:`Python Development Mode <devmode>`, introduciendo comprobaciones de "
 "tiempo de ejecución adicionales que son demasiado caras para habilitarse de "
-"forma predeterminada."
+"forma predeterminada. Esto equivale a configurar la opción :option:`-X` "
+"``dev``."
 
 #: ../Doc/using/cmdline.rst:1026
 msgid "If set to ``1``, enable the :ref:`Python UTF-8 Mode <utf8-mode>`."
@@ -1817,22 +1844,35 @@ msgid ""
 "code objects and pyc files are desired as well as suppressing the extra "
 "visual location indicators when the interpreter displays tracebacks."
 msgstr ""
+"Si se establece esta variable, deshabilita la inclusión de tablas que "
+"asignan información de ubicación adicional (línea final, desplazamiento de "
+"columna inicial y desplazamiento de columna final) a cada instrucción en los "
+"objetos de código. Esto es útil cuando se desean objetos de código más "
+"pequeños y archivos pyc, además de suprimir los indicadores de ubicación "
+"visuales adicionales cuando el intérprete muestra rastreos."
 
 #: ../Doc/using/cmdline.rst:1056
 msgid ""
 "If this variable is set to a nonzero value, it enables support for the Linux "
 "``perf`` profiler so Python calls can be detected by it."
 msgstr ""
+"Si esta variable se establece en un valor distinto de cero, habilita la "
+"compatibilidad con el perfilador ``perf`` de Linux para que pueda detectar "
+"las llamadas de Python."
 
 #: ../Doc/using/cmdline.rst:1059
 msgid "If set to ``0``, disable Linux ``perf`` profiler support."
 msgstr ""
+"Si se establece en ``0``, deshabilite la compatibilidad con el generador de "
+"perfiles ``perf`` de Linux."
 
 #: ../Doc/using/cmdline.rst:1061
 msgid ""
 "See also the :option:`-X perf <-X>` command-line option and :ref:"
 "`perf_profiling`."
 msgstr ""
+"Consulte también la opción de línea de comandos :option:`-X perf <-X>` y :"
+"ref:`perf_profiling`."
 
 #: ../Doc/using/cmdline.rst:1068
 msgid "Debug-mode variables"
@@ -1854,13 +1894,12 @@ msgstr ""
 "trace-refs`."
 
 #: ../Doc/using/cmdline.rst:1079
-#, fuzzy
 msgid ""
 "If set, Python will dump objects and reference counts still alive after "
 "shutting down the interpreter into a file called *FILENAME*."
 msgstr ""
 "Si se establece, Python volcará objetos y recuentos de referencias aún vivos "
-"después de apagar el intérprete."
+"después de apagar el intérprete en un archivo llamado *FILENAME*."
 
 #~ msgid "If set, Python will print threading debug info into stdout."
 #~ msgstr ""
