--- a/tutorial/stdlib.po
+++ b/tutorial/stdlib.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
-"PO-Revision-Date: 2020-05-15 23:37-0300\n"
+"PO-Revision-Date: 2023-10-16 11:16-0500\n"
 "Last-Translator: \n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.13.0\n"
+"X-Generator: Poedit 3.4\n"
 
 #: ../Doc/tutorial/stdlib.rst:5
 msgid "Brief Tour of the Standard Library"
@@ -80,13 +81,12 @@ msgid "Command Line Arguments"
 msgstr "Argumentos de linea de órdenes"
 
 #: ../Doc/tutorial/stdlib.rst:66
-#, fuzzy
 msgid ""
 "Common utility scripts often need to process command line arguments. These "
 "arguments are stored in the :mod:`sys` module's *argv* attribute as a list.  "
 "For instance, let's take the following :file:`demo.py` file::"
 msgstr ""
-"Los programas frecuentemente necesitan procesar argumentos de linea de "
+"Los programas frecuentemente necesitan procesar argumentos de línea de "
 "órdenes. Estos argumentos se almacenan en el atributo *argv* del módulo :mod:"
 "`sys` como una lista.  Por ejemplo, la siguiente salida resulta de ejecutar "
 "``python demo.py uno dos tres`` en la línea de órdenes::"
@@ -96,6 +96,8 @@ msgid ""
 "Here is the output from running ``python demo.py one two three`` at the "
 "command line::"
 msgstr ""
+"Este es el resultado de ejecutar ``python demo.py uno dos tres`` en la línea "
+"de comandos::"
 
 #: ../Doc/tutorial/stdlib.rst:79
 msgid ""
@@ -336,15 +338,14 @@ msgstr ""
 "ejemplo:"
 
 #: ../Doc/tutorial/stdlib.rst:333
-#, fuzzy
 msgid ""
 "The :mod:`xmlrpc.client` and :mod:`xmlrpc.server` modules make implementing "
 "remote procedure calls into an almost trivial task.  Despite the modules' "
 "names, no direct knowledge or handling of XML is needed."
 msgstr ""
-"Los módulo :mod:`xmlrpc.client` y :mod:`xmlrpc.server` convierten una "
+"Los módulos :mod:`xmlrpc.client` y :mod:`xmlrpc.server` convierten una "
 "implementación de la llamada a un procedimiento en una tarea casi trivial. A "
-"pesar de los nombres de los nombres, no se necesita ningún conocimiento o "
+"pesar de los nombres de los módulos, no se necesita ningún conocimiento o "
 "manejo de archivos XML."
 
 #: ../Doc/tutorial/stdlib.rst:337
