--- a/distributing/index.po
+++ b/distributing/index.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
-"PO-Revision-Date: 2021-11-12 10:29+0800\n"
+"PO-Revision-Date: 2023-10-16 11:28-0500\n"
 "Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.13.0\n"
+"X-Generator: Poedit 3.3.2\n"
 
 #: ../Doc/distributing/index.rst:10
 msgid "Distributing Python Modules"
@@ -31,6 +32,9 @@ msgid ""
 "been moved to the `Python Packaging User Guide`_, and the tutorial on "
 "`packaging Python projects`_."
 msgstr ""
+"\"La información y orientación sobre la distribución de módulos y paquetes "
+"de Python se ha trasladado a la  `Guía del Usuario de Empaquetado de Python "
+"` y al tutorial sobre  `empaquetar proyectos de Python`\"."
 
 #~ msgid "Email"
 #~ msgstr "Email"
