correccion tutorial/stdlib.po

--- a/tutorial/stdlib.po
+++ b/tutorial/stdlib.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
-"PO-Revision-Date: 2023-10-16 11:16-0500\n"
+"PO-Revision-Date: 2023-10-16 11:38-0500\n"
 "Last-Translator: \n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -404,8 +404,8 @@ msgstr ""
 
 #: ../Doc/tutorial/stdlib.rst:27
 msgid "built-in function"
-msgstr ""
+msgstr "función incorporada"
 
 #: ../Doc/tutorial/stdlib.rst:27
 msgid "help"
-msgstr ""
+msgstr "ayuda"
