correccion de tutorial/stdlib.po

--- a/tutorial/stdlib.po
+++ b/tutorial/stdlib.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
-"PO-Revision-Date: 2023-10-16 11:38-0500\n"
+"PO-Revision-Date: 2023-10-16 11:45-0500\n"
 "Last-Translator: \n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -87,17 +87,10 @@ msgid ""
 "arguments are stored in the :mod:`sys` module's *argv* attribute as a list.  "
 "For instance, let's take the following :file:`demo.py` file::"
 msgstr ""
-<<<<<<< HEAD
-"Los programas frecuentemente necesitan procesar argumentos de línea de "
+"Los programas frecuentemente necesitan procesar argumentos de linea de "
 "órdenes. Estos argumentos se almacenan en el atributo *argv* del módulo :mod:"
 "`sys` como una lista.  Por ejemplo, la siguiente salida resulta de ejecutar "
 "``python demo.py uno dos tres`` en la línea de órdenes::"
-=======
-"Los scripts de utilidades comunes a menudo necesitan procesar argumentos de "
-"línea de comandos. Estos argumentos se almacenan en el atributo *argv* del "
-"módulo :mod:`sys` como una lista.  Por ejemplo, el siguiente resultado de la "
-"salida de ejecución ``python demo.py uno dos tres`` en la línea de comandos::"
->>>>>>> 3b0214b93554870f170b2cdcc5a7907987ac82f6
 
 #: ../Doc/tutorial/stdlib.rst:74
 msgid ""
@@ -351,17 +344,10 @@ msgid ""
 "remote procedure calls into an almost trivial task.  Despite the modules' "
 "names, no direct knowledge or handling of XML is needed."
 msgstr ""
-<<<<<<< HEAD
-"Los módulos :mod:`xmlrpc.client` y :mod:`xmlrpc.server` convierten una "
-"implementación de la llamada a un procedimiento en una tarea casi trivial. A "
-"pesar de los nombres de los módulos, no se necesita ningún conocimiento o "
-"manejo de archivos XML."
-=======
 "Los módulos :mod:`xmlrpc.client` y :mod:`xmlrpc.server` convierten la "
 "implementación de llamadas a procedimientos remotos en una tarea casi "
 "trivial.  A pesar de los nombres de los módulos, no se necesita ningún "
 "conocimiento o manejo directo de XML."
->>>>>>> 3b0214b93554870f170b2cdcc5a7907987ac82f6
 
 #: ../Doc/tutorial/stdlib.rst:337
 msgid ""
@@ -405,10 +391,10 @@ msgid ""
 "providing a persistent database that can be updated and accessed using "
 "slightly nonstandard SQL syntax."
 msgstr ""
-"El módulo :mod:`sqlite3` es un wrapper de la biblioteca de bases de "
-"datos SQLite, que proporciona una base de datos constante que se puede "
-"actualizar y a la que se puede acceder utilizando una sintaxis SQL "
-"ligeramente no estándar."
+"El módulo :mod:`sqlite3` es un wrapper de la biblioteca de bases de datos "
+"SQLite, que proporciona una base de datos constante que se puede actualizar "
+"y a la que se puede acceder utilizando una sintaxis SQL ligeramente no "
+"estándar."
 
 #: ../Doc/tutorial/stdlib.rst:357
 msgid ""
