--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -1026,7 +1026,7 @@ msgstr ""
 "se proporciona esta opción, el perfilador ``perf`` podrá informar llamadas "
 "de Python. Esta opción sólo está disponible en algunas plataformas y no hará "
 "nada si no es compatible con el sistema actual. El valor predeterminado es "
-""off". Consulte también :envvar:`PYTHONPERFSUPPORT` y :ref:`perf_profiling`."
+"\"off\". Consulte también :envvar:`PYTHONPERFSUPPORT` y :ref:`perf_profiling`."
 
 #: ../Doc/using/cmdline.rst:550
 msgid ""
