--- a/using/windows.po
+++ b/using/windows.po
@@ -312,6 +312,8 @@ msgid ""
 "The following options (found by executing the installer with ``/?``) can be "
 "passed into the installer:"
 msgstr ""
+"Las siguientes opciones (encontradas al ejecutar el instalador con /?) "
+"pueden ser pasadas al instalador"
 
 #: ../Doc/using/windows.rst:133 ../Doc/using/windows.rst:153
 #: ../Doc/using/windows.rst:1082
@@ -325,55 +327,51 @@ msgstr "Descripción"
 
 #: ../Doc/using/windows.rst:135
 msgid "/passive"
-msgstr ""
+msgstr "/passive"
 
 #: ../Doc/using/windows.rst:135
 msgid "to display progress without requiring user interaction"
-msgstr ""
+msgstr "para mostrar el progreso sin requerir interacción del usuario"
 
 #: ../Doc/using/windows.rst:137
 msgid "/quiet"
-msgstr ""
+msgstr "/quiet"
 
 #: ../Doc/using/windows.rst:137
-#, fuzzy
 msgid "to install/uninstall without displaying any UI"
-msgstr "Instalación sin descargas"
+msgstr "para instalar/desinstalar sin mostrar ninguna interfaz"
 
 #: ../Doc/using/windows.rst:139
-#, fuzzy
 msgid "/simple"
-msgstr "SimpleInstall"
+msgstr "/simple"
 
 #: ../Doc/using/windows.rst:139
-#, fuzzy
 msgid "to prevent user customization"
-msgstr "Personalización"
+msgstr "para prevenir la personalización del usuario"
 
 #: ../Doc/using/windows.rst:141
-#, fuzzy
 msgid "/uninstall"
-msgstr "SimpleInstall"
+msgstr "/desinstalar"
 
 #: ../Doc/using/windows.rst:141
 msgid "to remove Python (without confirmation)"
-msgstr ""
+msgstr "para eliminar Python (sin confirmación)"
 
 #: ../Doc/using/windows.rst:143
 msgid "/layout [directory]"
-msgstr ""
+msgstr "/layout [directorio]"
 
 #: ../Doc/using/windows.rst:143
 msgid "to pre-download all components"
-msgstr ""
+msgstr "para pre-descargar todos los componentes"
 
 #: ../Doc/using/windows.rst:145
 msgid "/log [filename]"
-msgstr ""
+msgstr "/log [nombre de archivo]"
 
 #: ../Doc/using/windows.rst:145
 msgid "to specify log files location"
-msgstr ""
+msgstr "para especificar la ubicación de los archivos de registro"
 
 #: ../Doc/using/windows.rst:148
 msgid ""
@@ -1125,7 +1123,6 @@ msgstr ""
 "aplicación, en lugar de ser accedido directamente por los usuarios finales."
 
 #: ../Doc/using/windows.rst:468
-#, fuzzy
 msgid ""
 "When extracted, the embedded distribution is (almost) fully isolated from "
 "the user's system, including environment variables, system registry "
@@ -1137,11 +1134,11 @@ msgid ""
 msgstr ""
 "Al ser extraída, la distribución incrustable está (casi) completamente "
 "aislada del sistema del usuario, incluyendo variables de entorno, "
-"configuraciones del registro del sistema y paquetes instalados. La "
+"configuraciones del registro del sistema y paquetes instalados. la "
 "biblioteca estándar se incluye como archivos ``.pyc`` precompilados y "
 "optimizados dentro de un ZIP, y ``python3.dll``, ``python37.dll``, ``python."
-"exe`` y ``pythonw.exe`` están todos proporcionados. Tcl/tk (incluidos sus "
-"dependientes, como Idle), pip y la documentación de Python no están "
+"exe`` y ``pythonw.exe`` están todos proporcionados. Tcl/tk (incluidas sus "
+"dependencias, como Idle), pip y la documentación de Python no están "
 "incluidos."
 
 #: ../Doc/using/windows.rst:477
@@ -1304,9 +1301,8 @@ msgstr ""
 "populares y sus características clave:"
 
 #: ../Doc/using/windows.rst:545
-#, fuzzy
 msgid "`ActivePython <https://www.activestate.com/products/python/>`_"
-msgstr "`ActivePython <https://www.activestate.com/activepython/>`_"
+msgstr "`ActivePython <https://www.activestate.com/products/python/>`_"
 
 #: ../Doc/using/windows.rst:545
 msgid "Installer with multi-platform compatibility, documentation, PyWin32"
@@ -1744,6 +1740,12 @@ msgid ""
 "following :pep:`514` will be discoverable. The ``--list`` command lists all "
 "available runtimes using the ``-V:`` format."
 msgstr ""
+"El argumento ``-x.y`` es la forma corta del argumento ``-V:Company/Tag``, "
+"que permite seleccionar un entorno de ejecución Python específico, incluidos "
+"aquellos que pueden haber provenido de lugares diferentes a python.org. "
+"Cualquier entorno registrado siguiendo el :pep:`514` será detectable. El "
+"comando ``--list`` muestra todos los entornos disponibles usando el formato "
+"``-V:``."
 
 #: ../Doc/using/windows.rst:763
 msgid ""
@@ -1751,6 +1753,10 @@ msgid ""
 "to runtimes from that provider, while specifying only the Tag will select "
 "from all providers. Note that omitting the slash implies a tag::"
 msgstr ""
+"Al usar el argumento ``-V:``, especificar la Compañía limitará la selección "
+"a entornos de ese proveedor, mientras que especificar solo la Etiqueta "
+"seleccionará de todos los proveedores. Tenga en cuenta que omitir la barra "
+"implica una etiqueta:"
 
 #: ../Doc/using/windows.rst:776
 msgid ""
@@ -1758,6 +1764,9 @@ msgid ""
 "releases, and not other distributions. However, the longer form (``-V:3``) "
 "will select from any."
 msgstr ""
+"La forma corta del argumento (``-3``) solo selecciona de las versiones "
+"principales de Python y no de otras distribuciones. Sin embargo, la forma "
+"más larga (``-V:3``) seleccionará de cualquiera."
 
 #: ../Doc/using/windows.rst:780
 msgid ""
@@ -1767,6 +1776,13 @@ msgid ""
 "``3.10``. Tags are sorted using numerical ordering (``3.10`` is newer than "
 "``3.1``), but are compared using text (``-V:3.01`` does not match ``3.1``)."
 msgstr ""
+"La Compañía se compara con la cadena completa, sin distinguir entre "
+"mayúsculas y minúsculas. La Etiqueta se compara ya sea con la cadena "
+"completa o con un prefijo, siempre que el siguiente carácter sea un punto o "
+"un guión. Esto permite que ``-V:3.1`` coincida con ``3.1-32``, pero no con "
+"``3.10``. Las etiquetas se ordenan numéricamente(``3.10`` es más reciente "
+"que ``3.1``), pero se comparan usando texto (``-V:3.01`` no coincide con "
+"``3.1``)."
 
 #: ../Doc/using/windows.rst:788
 msgid "Virtual environments"
@@ -1813,7 +1829,6 @@ msgstr ""
 "de Python 2.x. Ahora pruebe cambiando la primera línea por:"
 
 #: ../Doc/using/windows.rst:822
-#, fuzzy
 msgid ""
 "Re-executing the command should now print the latest Python 3.x information. "
 "As with the above command-line examples, you can specify a more explicit "
@@ -1825,8 +1840,8 @@ msgstr ""
 "reciente de Python 3.x. Al igual que con los ejemplos de línea de comandos "
 "anteriores, puede especificar un calificador de versión más explícito. "
 "Suponiendo que tiene instalado Python 3.7, intente cambiar la primera línea "
-"a ``#! python3.7`` y debería encontrar la información de la versión |"
-"version| impresa."
+"a ``#! python3.7`` y debería encontrar la información de la versión 3.7 "
+"impresa."
 
 #: ../Doc/using/windows.rst:828
 msgid ""
@@ -1900,9 +1915,8 @@ msgstr ""
 "especificar qué intérprete utilizar. Los comandos virtuales soportados son:"
 
 #: ../Doc/using/windows.rst:859
-#, fuzzy
 msgid "``/usr/bin/env``"
-msgstr "``/usr/bin/env python``"
+msgstr "``/usr/bin/env``"
 
 #: ../Doc/using/windows.rst:860
 msgid "``/usr/bin/python``"
@@ -1961,18 +1975,16 @@ msgstr ""
 "python3-64``)."
 
 #: ../Doc/using/windows.rst:890
-#, fuzzy
 msgid ""
 "The \"-64\" suffix is deprecated, and now implies \"any architecture that is "
 "not provably i386/32-bit\". To request a specific environment, use the new :"
 "samp:`-V:{TAG}` argument with the complete tag."
 msgstr ""
 "El sufijo \"-64\" está en desuso y ahora implica \"cualquier arquitectura "
-"que no sea probablemente i386/32 bits\". Para solicitar un entorno "
-"específico, use el nuevo argumento ``-V:<TAG>`` con la etiqueta completa."
+"que comprobable no sea i386/32 bits\". Para solicitar un entorno específico, "
+"use el nuevo argumento :samp:`-V:{TAG}` con la etiqueta completa."
 
 #: ../Doc/using/windows.rst:894
-#, fuzzy
 msgid ""
 "The ``/usr/bin/env`` form of shebang line has one further special property. "
 "Before looking for installed Python interpreters, this form will search the "
@@ -1985,15 +1997,17 @@ msgid ""
 "`PYLAUNCHER_NO_SEARCH_PATH` may be set (to any value) to skip this search "
 "of :envvar:`PATH`."
 msgstr ""
-"La forma ``/usr/bin/env`` de la línea shebang tiene otra propiedad especial. "
-"Antes de buscar intérpretes de Python instalados, este formulario buscará en "
-"el ejecutable :envvar:`PATH` un ejecutable de Python. Esto corresponde al "
-"comportamiento del programa Unix ``env``, que realiza una búsqueda :envvar:"
-"`PATH`. Si no se encuentra un ejecutable que coincida con el primer "
-"argumento después del comando ``env``, se manejará como se describe a "
-"continuación. Además, la variable de entorno :envvar:"
-"`PYLAUNCHER_NO_SEARCH_PATH` se puede establecer (en cualquier valor) para "
-"omitir esta búsqueda adicional."
+"La forma ``/usr/bin/env`` de la línea shebang tiene una propiedad especial "
+"adicional. Antes de buscar intérpretes de Python instalados, esta forma "
+"buscará en el ejecutable :envvar:`PATH` un ejecutable de Python que coincida "
+"con el nombre proporcionado como primer argumento. Esto corresponde al "
+"comportamiento del programa Unix ``env``, que realiza una búsqueda en :"
+"envvar:`PATH`. Si no se puede encontrar un ejecutable que coincida con el "
+"primer argumento después del comando ``env`` pero el argumento comienza con "
+"``python``, será manejado como se describe para los otros comandos "
+"virtuales. La variable de entorno :envvar:`PYLAUNCHER_NO_SEARCH_PATH` puede "
+"ser establecida (a cualquier valor) para omitir esta búsqueda en :envvar:"
+"`PATH`."
 
 #: ../Doc/using/windows.rst:905
 msgid ""
@@ -2005,6 +2019,13 @@ msgid ""
 "executable (additional arguments specified in the .INI will be quoted as "
 "part of the filename)."
 msgstr ""
+"Las líneas Shebang que no coincidan con ninguno de estos patrones se buscan "
+"en la sección ``[commands]`` del :ref:`archivo .INI <launcher-ini>` del "
+"lanzador. Esto se puede usar para manejar ciertos comandos de una manera que "
+"tenga sentido para tu sistema. El nombre del comando debe ser un único "
+"argumento (sin espacios en el ejecutable shebang), y el valor sustituido es "
+"la ruta completa al ejecutable (los argumentos adicionales especificados en "
+"el .INI se citarán como parte del nombre del archivo)."
 
 #: ../Doc/using/windows.rst:918
 msgid ""
@@ -2016,6 +2037,13 @@ msgid ""
 "arguments, after which the path to the script and any additional arguments "
 "will be appended."
 msgstr ""
+"Cualquier comando que no se encuentre en el archivo .INI se trata como rutas "
+"ejecutables de **Windows** que son absolutas o relativas al directorio que "
+"contiene el archivo de script. Esto es una comodidad para los scripts solo "
+"para Windows, como aquellos generados por un instalador, ya que el "
+"comportamiento no es compatible con los shells al estilo Unix. Estas rutas "
+"pueden estar entre comillas y pueden incluir varios argumentos, tras los "
+"cuales se añadirá la ruta al script y cualquier argumento adicional."
 
 #: ../Doc/using/windows.rst:927
 msgid "Arguments in shebang lines"
@@ -2042,7 +2070,6 @@ msgid "Customization via INI files"
 msgstr "Personalización con archivos INI"
 
 #: ../Doc/using/windows.rst:946
-#, fuzzy
 msgid ""
 "Two .ini files will be searched by the launcher - ``py.ini`` in the current "
 "user's application data directory (``%LOCALAPPDATA%`` or ``$env:"
@@ -2050,12 +2077,12 @@ msgid ""
 "same .ini files are used for both the 'console' version of the launcher (i."
 "e. py.exe) and for the 'windows' version (i.e. pyw.exe)."
 msgstr ""
-"El lanzador buscará dos archivos .ini - ``py.ini`` en el directorio de "
-"\"datos de aplicación\" del usuario actual (esto es el directorio retornado "
-"por el llamado a la función de Windows ``SHGetFolderPath`` con "
-"``CSIDL_LOCAL_APPDATA``) y ``py.ini`` en el directorio del lanzador. Los "
-"mismos archivos .ini son usados por la versión 'consola' del lanzador (py."
-"exe) y por la versión 'ventana' (pyw.exe)."
+"El lanzador buscará dos archivos .ini - ``py.ini`` en el directorio de datos "
+"de aplicación del usuario actual (``%LOCALAPPDATA%`` o ``$env:"
+"LocalAppData``) y ``py.ini`` en el mismo directorio que el lanzador. Los "
+"mismos archivos .ini son utilizados tanto para la versión 'consola' del "
+"lanzador (es decir, py.exe) como para la version 'windows' (es decir pyw."
+"exe)."
 
 #: ../Doc/using/windows.rst:952
 msgid ""
@@ -2661,16 +2688,14 @@ msgstr ""
 "``pyvenv.cfg``."
 
 #: ../Doc/using/windows.rst:1195
-#, fuzzy
 msgid ""
 "Adds :file:`python{XX}.zip` as a potential landmark when directly adjacent "
 "to the executable."
 msgstr ""
-"Agrega ``pythonXX.zip`` como un potencial archivo de referencia cuando se "
-"encuentra junto al ejecutable."
+"Agrega :file:`python{XX}.zip` como un potencial archivo de referencia cuando "
+"se encuentra junto al ejecutable."
 
 #: ../Doc/using/windows.rst:1201
-#, fuzzy
 msgid ""
 "Modules specified in the registry under ``Modules`` (not ``PythonPath``) may "
 "be imported by :class:`importlib.machinery.WindowsRegistryFinder`. This "
@@ -2681,7 +2706,7 @@ msgstr ""
 "``PythonPath``) pueden ser importados por :class:`importlib.machinery."
 "WindowsRegistryFinder`. Este buscador está habilitado en Windows en la "
 "versión 3.6.0 y anteriores, pero es posible que deba agregarse "
-"explícitamente a :attr:`sys.meta_path` en el futuro."
+"explícitamente a :data:`sys.meta_path` en el futuro."
 
 #: ../Doc/using/windows.rst:1207
 msgid "Additional modules"
@@ -2781,18 +2806,16 @@ msgid "cx_Freeze"
 msgstr "cx_Freeze"
 
 #: ../Doc/using/windows.rst:1249
-#, fuzzy
 msgid ""
 "`cx_Freeze <https://cx-freeze.readthedocs.io/en/latest/>`_ wraps Python "
 "scripts into executable Windows programs (:file:`{*}.exe` files).  When you "
 "have done this, you can distribute your application without requiring your "
 "users to install Python."
 msgstr ""
-"`cx_Freeze <https://cx-freeze.readthedocs.io/en/latest/>`_ es una extensión "
-"de :mod:`distutils` (ver :ref:`extending-distutils`) que empaqueta scripts "
-"de Python en programas ejecutables de Windows (archivos :file:`{*}.exe` ). "
-"Al hacer esto, se puede distribuir una aplicación sin que los usuarios "
-"necesiten instalar Python."
+"`cx_Freeze <https://cx-freeze.readthedocs.io/en/latest/>`_ envuelve scripts "
+"de Python en programas ejecutables de Windows (archivos :file:`{*}.exe`)."
+"Cuando hayas hecho esto, puedes distribuir tu aplicación sin requerir que "
+"tus usuarios instalen Python."
 
 #: ../Doc/using/windows.rst:1256
 msgid "Compiling Python on Windows"
