--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -1007,10 +1007,10 @@ msgid ""
 msgstr ""
 "``-X frozen_modules`` determina si la maquinaria de importación ignora o no "
 "los módulos congelados. Un valor \"on\" significa que se importan y \"off\" "
-"significa que se ignoran. El valor predeterminado es \"on\" si se trata de un "
-"Python instalado (el caso normal). Si está en desarrollo (ejecutándose desde "
-"el árbol de fuentes), entonces el valor predeterminado es \"off\". Tenga en "
-"cuenta que los módulos congelados \"importlib_bootstrap\" e "
+"significa que se ignoran. El valor predeterminado es \"on\" si se trata de "
+"un Python instalado (el caso normal). Si está en desarrollo (ejecutándose "
+"desde el árbol de fuentes), entonces el valor predeterminado es \"off\". "
+"Tenga en cuenta que los módulos congelados \"importlib_bootstrap\" e "
 "\"importlib_bootstrap_external\" siempre se utilizan, incluso si este "
 "indicador está configurado en \"off\"."
 
@@ -1026,7 +1026,8 @@ msgstr ""
 "se proporciona esta opción, el perfilador ``perf`` podrá informar llamadas "
 "de Python. Esta opción sólo está disponible en algunas plataformas y no hará "
 "nada si no es compatible con el sistema actual. El valor predeterminado es "
-"\"off\". Consulte también :envvar:`PYTHONPERFSUPPORT` y :ref:`perf_profiling`."
+"\"off\". Consulte también :envvar:`PYTHONPERFSUPPORT` y :ref:"
+"`perf_profiling`."
 
 #: ../Doc/using/cmdline.rst:550
 msgid ""
