commit rtobar suggestions

--- a/tutorial/introduction.po
+++ b/tutorial/introduction.po
@@ -207,8 +207,8 @@ msgid ""
 msgstr ""
 "Python puede manipular texto (representado por el tipo :class:`str`, "
 "conocido como \"cadenas de caracteres\") al igual que números. Esto incluye "
-"caracteres \"``!``\", palabras \"``conejo``\", names \"``París``\", "
-"oraciones \"``¡Te tengo a la vista!.``\", etc. \"``Yay! :)``\". Se pueden "
+"caracteres \"``!``\", palabras \"``conejo``\", nombres \"``París``\", "
+"oraciones \"``¡Te tengo a la vista!``\", etc. \"``Yay! :)``\". Se pueden "
 "encerrar en comillas simples (``'...'``) o comillas dobles (``\"...\"``) con "
 "el mismo resultado [#]_."
 
@@ -681,4 +681,4 @@ msgstr "# (hash)"
 
 #: ../Doc/tutorial/introduction.rst:21
 msgid "comment"
-msgstr "Comentario"
+msgstr "comentario"
