--- a/using/windows.po
+++ b/using/windows.po
@@ -351,7 +351,7 @@ msgstr "para prevenir la personalización del usuario"
 
 #: ../Doc/using/windows.rst:141
 msgid "/uninstall"
-msgstr "/desinstalar"
+msgstr "/uninstall"
 
 #: ../Doc/using/windows.rst:141
 msgid "to remove Python (without confirmation)"
