--- a/using/windows.po
+++ b/using/windows.po
@@ -312,7 +312,7 @@ msgid ""
 "The following options (found by executing the installer with ``/?``) can be "
 "passed into the installer:"
 msgstr ""
-"Las siguientes opciones (encontradas al ejecutar el instalador con /?) "
+"Las siguientes opciones (encontradas al ejecutar el instalador con ``/?``) "
 "pueden ser pasadas al instalador"
 
 #: ../Doc/using/windows.rst:133 ../Doc/using/windows.rst:153
