--- a/using/windows.po
+++ b/using/windows.po
@@ -1134,7 +1134,7 @@ msgid ""
 msgstr ""
 "Al ser extraída, la distribución incrustable está (casi) completamente "
 "aislada del sistema del usuario, incluyendo variables de entorno, "
-"configuraciones del registro del sistema y paquetes instalados. la "
+"configuraciones del registro del sistema y paquetes instalados. La "
 "biblioteca estándar se incluye como archivos ``.pyc`` precompilados y "
 "optimizados dentro de un ZIP, y ``python3.dll``, ``python37.dll``, ``python."
 "exe`` y ``pythonw.exe`` están todos proporcionados. Tcl/tk (incluidas sus "
